[C-2930] Fix extra space after username in tip to unlock modal (#3845)

--- a/packages/web/src/components/track/GiantTrackTile.module.css
+++ b/packages/web/src/components/track/GiantTrackTile.module.css
@@ -320,6 +320,10 @@
   margin-right: 0px !important; /* to override the !important in UserBadges */
 }
 
+.noContentBadgeIcon {
+  margin-left: 0;
+}
+
 .badgeAi {
   background: linear-gradient(
       180deg,
